Updated HTML code to make sure it validates

--- a/Crane-Ashley-final-project1/index.html
+++ b/Crane-Ashley-final-project1/index.html
@@ -22,7 +22,7 @@ In the Czech Republic and Slovakia, tramping (Czech: tramping, tremping, a word 
 <h2 id="history">History</h2>
 <p>The idea of undertaking a walk through the countryside for pleasure developed in the 18th-century, and arose because of changing attitudes to the landscape and nature, associated with the Romantic movement.[10] In earlier times walking generally indicated poverty and was also associated with vagrancy.[11]</p>
 <h3>England</h3>
-<p>Thomas West, an English clergyman, popularized the idea of walking for pleasure in his guide to the <em><strong>Lake District</strong></em> of 1778. In the introduction he wrote that he <br /> <q>aimed
+<p>Thomas West, an English clergyman, popularized the idea of walking for pleasure in his guide to the <em><strong>Lake District</strong></em> of 1778. In the introduction he wrote that he <q>aimed
 
 to encourage the taste of visiting the lakes by furnishing the traveller with a Guide; and for that purpose, the writer has here collected and laid before him, all the select stations and points of view, noticed by those authors who have last made the tour of the lakes, verified by his own repeated observations.</q>[12] <br />
 
@@ -56,9 +56,9 @@ Generally, protected areas such as parks have regulations in place to protect th
 <h2 id="etiquette">Etiquette</h2>
 <p>Sometimes hikers can interfere with each other's enjoyment, or that of other users of the land. Hiking etiquette has developed to minimize such interference. Common hiking etiquette includes:</p>
 <ol>
-  <li>When two groups of hikers meet on a steep trail, a custom has developed in some areas whereby the group moving uphill has the right-of-way.[30]</li> <br />
-  <li>Being forced to hike much faster than one's natural pace can be annoying, difficult to maintain consistently, and increases fatigue; it may also cause injury. But if a group splits between fast and slow hikers, the slow hikers may be left behind or become lost. Therefore a common custom is to encourage the slowest hiker to lead and have everyone match that speed. Another custom is to have experienced hiker(s) sweep up the rear on a rota, to ensure that everyone in the group is safe.</li> <br />
-  <li>Hikers generally avoid making loud sounds, such as shouting or loud conversation, or the use of mobile phones.[30] However, in bear country, hikers make noise as a safety precaution.</li> <br />
+  <li>When two groups of hikers meet on a steep trail, a custom has developed in some areas whereby the group moving uphill has the right-of-way.[30]</li>
+  <li>Being forced to hike much faster than one's natural pace can be annoying, difficult to maintain consistently, and increases fatigue; it may also cause injury. But if a group splits between fast and slow hikers, the slow hikers may be left behind or become lost. Therefore a common custom is to encourage the slowest hiker to lead and have everyone match that speed. Another custom is to have experienced hiker(s) sweep up the rear on a rota, to ensure that everyone in the group is safe.</li>
+  <li>Hikers generally avoid making loud sounds, such as shouting or loud conversation, or the use of mobile phones.[30] However, in bear country, hikers make noise as a safety precaution.</li>
   <li>Hikers tend to avoid impacting on the land through which they travel. Hikers can avoid impact by staying on established trails, not picking plants, or disturbing wildlife, and carrying garbage out. The Leave No Trace movement offers a set of guidelines for low-impact hiking: "Leave nothing but footprints. Take nothing but photos. Kill nothing but time. Keep nothing but memories".</li>
 </ol>
 <h2 id="hazards">Hazards</h2>
@@ -67,14 +67,21 @@ Generally, protected areas such as parks have regulations in place to protect th
 <p>In various countries, borders may be poorly marked, so it is good practice to know where international borders are. In 2009, Iran imprisoned three Americans for hiking across the Iran-Iraq border.[33] It is illegal to cross into the USA on the Pacific Crest Trail from Canada. Going south to north it is more straightforward and a crossing can be made, if advanced arrangements are made with Canadian Border Services. Within the European Union, and associated nations like Switzerland and Norway, there are no impediments to crossing by path, and borders are not always obvious.[34] All the same necessary documents should always be carried and the law followed (people from some countries may require a visa).</p>
 <h2 id="gallery">Gallery</h2>
 <figure>
-<h3><a href= "images/backpack.jpg"><img src="images/backpack.jpg" alt="Equipment" title="Backpack" /></a></h3>
-<figcaption>Backpack for hiking. Photo Credit: <a href="http://www.flickr.com/photos/26209464@N00/2666025162/">simonov</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by-sa/2.0/">cc</a></figcaption>
-<h3><a href="images/caverntrail.jpg"><img src="images/caverntrail.jpg" alt="Cavern Trail" title="Cavern Trail" /></a></h3>
- <figcaption>A trail through a cavern. Photo Credit: <a href="http://www.flickr.com/photos/22016744@N06/8797741845/">Steve Corey</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by-nd/2.0/">cc</a></figcaption>
- <h3><a href="images/mountainhike.jpg"><img src="images/mountainhike.jpg" alt= "Mountain Hike" title="Mountain Hike" /></a></h3>
- <figcaption>A hike through the mountains. Photo Credit: <a href="http://www.flickr.com/photos/27526784@N05/7206098342/">glassghost</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/">cc</a></figcaption>
- <h3><a href="images/woodhike.jpg"><img src="images/woodhike.jpg" alt="Wood Hike" title="Wood Hike" /></a></h3>
- <figcaption>A hike through the woods. Photo Credit: <a href="http://www.flickr.com/photos/15119648@N04/10675157916/">Hypnotica Studios Infinite</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by/2.0/">cc</a>
+  <a href= "images/backpack.jpg"><img src="images/backpack.jpg" alt="Equipment" title="Backpack" /></a>
+   <figcaption>Backpack for hiking. Photo Credit: <a href="http://www.flickr.com/photos/26209464@N00/2666025162/">simonov</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by-sa/2.0/">cc</a></figcaption>
+</figure>
+<figure>
+  <a href="images/caverntrail.jpg"><img src="images/caverntrail.jpg" alt="Cavern Trail" title="Cavern Trail" /></a>
+    <figcaption>A trail through a cavern. Photo Credit: <a href="http://www.flickr.com/photos/22016744@N06/8797741845/">Steve Corey</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by-nd/2.0/">cc</a></figcaption>
+</figure>
+<figure> 
+  <a href="images/mountainhike.jpg"><img src="images/mountainhike.jpg" alt= "Mountain Hike" title="Mountain Hike" /></a>
+   <figcaption>A hike through the mountains. Photo Credit: <a href="http://www.flickr.com/photos/27526784@N05/7206098342/">glassghost</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/">cc</a></figcaption>
+ </figure>
+ 
+ <figure>
+  <a href="images/woodhike.jpg"><img src="images/woodhike.jpg" alt="Wood Hike" title="Wood Hike" /></a>
+  <figcaption>A hike through the woods. Photo Credit: <a href="http://www.flickr.com/photos/15119648@N04/10675157916/">Hypnotica Studios Infinite</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by/2.0/">cc</a></figcaption>
  </figure>
   
  </body>
