added wikipedia resource to code

--- a/Crane-Ashley-final-project1/index.html
+++ b/Crane-Ashley-final-project1/index.html
@@ -83,6 +83,7 @@ Generally, protected areas such as parks have regulations in place to protect th
   <a href="images/woodhike.jpg"><img src="images/woodhike.jpg" alt="Wood Hike" title="Wood Hike" /></a>
   <figcaption>A hike through the woods. Photo Credit: <a href="http://www.flickr.com/photos/15119648@N04/10675157916/">Hypnotica Studios Infinite</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by/2.0/">cc</a></figcaption>
  </figure>
+ <p> Resource: <a href="https://en.wikipedia.org/wiki/Hiking">https://en.wikipedia.org/wiki/Hiking</a></p>
   
  </body>
  </html> 
