fixed HTML so it validates

--- a/Crane-Ashley-final-project2/index.html
+++ b/Crane-Ashley-final-project2/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang= "en">
 	<head>
+	<link href="//fonts.googleapis.com/css?family=Shadows+Into+Light:400" rel="stylesheet" type="text/css">
+
  	<meta charset= "utf-8" />
-	 <title>Hiking</title>
+	 <title>Hiking</title>	
 	 		<link rel="stylesheet" href="css/styles.css" />
-	<link href="//fonts.googleapis.com/css?family=Shadows+Into Light:400" rel="stylesheet" type="text/css">
  </head>
- 	<div id="page"> <!--Page Div--!>
+ 	
  <body>
+ <div id="page"> <!--Page Div-->
   	<h1 id="top">Hiking</h1>
-  	<div class="navigation">  		<!-- Navigation Div--!>
+  	<div class="navigation">  		<!--Navigation Div-->
   	<ul>
     	<li><a href="#relatedterms">Related Terms</a>
     	<li><a href="#history">History</a>
@@ -19,7 +21,7 @@
     	<li><a href="#hazards">Hazards</a>
     	<li><a href="#gallery">Gallery</a>
    	</ul> 
-   	</div>  	<!--End of Navigation--!>
+   	</div>  	<!--End of Navigation-->
    	
    	<p>Hiking in Canada and the USA is the preferred term for a long, vigorous walk in the countryside, often on hiking trails, while the word walking is used for shorter, particularly urban walks. On the other hand in the United Kingdom, and the Republic of Ireland, the term walking is used to describe all forms of walking, whether it is a walk in the park or trekking in the Alps. The word hiking is also sometimes used in the UK, along with rambling, hillwalking, and fell walking. In New Zealand a long, vigorous walk or hike is called tramping.[1] It is such a popular activity that there are numerous hiking organizations worldwide, and studies suggest that hiking and walking have health benefits.[2][3] Hiking times can be estimated by Naismith's rule or Tobler's hiking function.</p>
 	<h2 id="relatedterms">Related Terms</h2>
@@ -73,7 +75,7 @@ Generally, protected areas such as parks have regulations in place to protect th
 	<p>In various countries, borders may be poorly marked, so it is good practice to know where international borders are. In 2009, Iran imprisoned three Americans for hiking across the Iran-Iraq border.[33] It is illegal to cross into the USA on the Pacific Crest Trail from Canada. Going south to north it is more straightforward and a crossing can be made, if advanced arrangements are made with Canadian Border Services. Within the European Union, and associated nations like Switzerland and Norway, there are no impediments to crossing by path, and borders are not always obvious.[34] All the same necessary documents should always be carried and the law followed (people from some countries may require a visa).</p>
 <h2 id="gallery">Gallery</h2>
 
-<div id="images">  <!-- Image Div Begin --!> 
+<div id="images">  <!-- Image Div Begin --> 
 
 <figure id="image1">
   <a href= "images/backpack.jpg"><img src="images/backpack.jpg" alt="Equipment" title="Backpack" /></a>
@@ -98,6 +100,6 @@ Generally, protected areas such as parks have regulations in place to protect th
   </div> <!-- Image Div Ends !-->
   
  <p> Resource: <a href="https://en.wikipedia.org/wiki/Hiking">https://en.wikipedia.org/wiki/Hiking</a></p>
-  </div> <!--End of Page Div--!>
+  </div> <!--End of Page Div-->
  </body>
 </html> 
