corrected wrong image file in HTML file

--- a/Crane-Ashley-final-project3/index.html
+++ b/Crane-Ashley-final-project3/index.html
@@ -102,7 +102,7 @@ Generally, protected areas such as parks have regulations in place to protect th
  </figure>
  
  <figure id="image4">
-  <a href="images/woodhike.jpg"><img src="images/woodhike.jpg" alt="Wood Hike" title="Wood Hike" /></a>
+  <a href="images/woodhike.jpg"><img src="images/Woodhike.jpg" alt="Wood Hike" title="Wood Hike" /></a>
   <figcaption>Photo Credit: <a href="http://www.flickr.com/photos/43360570@N02/5268305970/">dalioPhoto</a> via <a href="http://compfight.com">Compfight</a> <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">cc</a></figcaption>
   </figure>
   </div> <!-- Images Div ends-->
